# bp-to-bagels-csv

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  cliff.toml  deny.toml  flake.nix  justfile  rustfmt.toml  typos.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
nix/: claude_settings.nix  hm-module.nix  module.nix  package.nix
src/: args.rs  main.rs  utils.rs
src/models/: bp.rs  mod.rs
